<resources>
    <string name="app_name">Fotobudka</string>

    <string name="options">OPTIONS</string>
    <string name="number_of_photos">Number of photos</string>
    <string name="duration">Duration between photos</string>
    <string name="before_photos">Sound before photos</string>
    <string name="enter_hint">Enter a number</string>
    <string name="submit">SUBMIT</string>
    <string name="take_photo">TAKE PHOTO</string>
</resources>